// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    >
      <RNSVGPath
        fill={
          Array [
            0,
            -16777216,
          ]
        }
        stroke={null}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. iconfacebook renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    >
      <RNSVGPath
        fill={
          Array [
            0,
            -16777216,
          ]
        }
        stroke={null}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. iconforwardarrow renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={null}
    >
      <RNSVGPath
        fill={
          Array [
            0,
            -16777216,
          ]
        }
        stroke={null}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. iconstar renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconcopylink renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`6. iconsavebookmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`7. icontwitter renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`8. iconvideo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGRect
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`9. iconvideo360player renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`10. thestlogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`11. thetimeslogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -341282,
        ]
      }
      stroke={
        Array [
          0,
          -4128786,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`12. closeicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup
    fill={
      Array [
        0,
        -16777216,
      ]
    }
    stroke={null}
  >
    <RNSVGPath
      fill={
        Array [
          0,
          -1,
        ]
      }
      stroke={
        Array [
          0,
          -1,
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`13. iconforwardchevron renders with different colours 1`] = `
<svg>
  <g
    fill="#facade"
  >
    <path />
  </g>
</svg>
`;
